// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/admin/price-lists GET /admin/price-lists returns a price list by :id 1`] = `
Object {
  "created_at": Any<String>,
  "customer_groups": Array [],
  "deleted_at": null,
  "description": "Winter sale for VIP customers. 25% off selected items.",
  "ends_at": "2022-07-31T00:00:00.000Z",
  "id": Any<String>,
  "name": "VIP winter sale",
  "prices": Array [
    Object {
      "amount": 100,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": 100,
      "min_quantity": 1,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant",
    },
    Object {
      "amount": 80,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": 500,
      "min_quantity": 101,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant",
    },
    Object {
      "amount": 50,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": 1000,
      "min_quantity": 501,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant",
    },
  ],
  "starts_at": "2022-07-01T00:00:00.000Z",
  "status": "active",
  "type": "sale",
  "updated_at": Any<String>,
}
`;

exports[`/admin/price-lists POST /admin/price-lists/:id updates a price list 1`] = `
Object {
  "created_at": Any<String>,
  "customer_groups": Array [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "id": "customer-group-1",
      "metadata": null,
      "name": "vip-customers",
      "updated_at": Any<String>,
    },
  ],
  "deleted_at": null,
  "description": "Winter sale for our most loyal customers",
  "ends_at": "2022-12-31T00:00:00.000Z",
  "id": "pl_no_customer_groups",
  "name": "Loyalty Reward - Winter Sale",
  "prices": ArrayContaining [
    Object {
      "amount": 100,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": 100,
      "min_quantity": 1,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant",
    },
    Object {
      "amount": 80,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": 500,
      "min_quantity": 101,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant",
    },
    Object {
      "amount": 50,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": 1000,
      "min_quantity": 501,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant",
    },
    Object {
      "amount": 85,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": null,
      "min_quantity": null,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant_1",
    },
    Object {
      "amount": 10,
      "created_at": Any<String>,
      "currency_code": "usd",
      "deleted_at": null,
      "id": Any<String>,
      "max_quantity": null,
      "min_quantity": null,
      "price_list_id": "pl_no_customer_groups",
      "region_id": null,
      "updated_at": Any<String>,
      "variant_id": "test-variant",
    },
  ],
  "starts_at": "2022-09-01T00:00:00.000Z",
  "status": "draft",
  "type": "sale",
  "updated_at": Any<String>,
}
`;

exports[`/admin/price-lists POST /admin/price-lists/:id updates the amount and currency of a price in the price list 1`] = `
Object {
  "amount": 250,
  "created_at": Any<String>,
  "currency_code": "eur",
  "deleted_at": null,
  "id": "ma_test_1",
  "max_quantity": 100,
  "min_quantity": 1,
  "price_list_id": "pl_no_customer_groups",
  "region_id": null,
  "updated_at": Any<String>,
  "variant_id": "test-variant",
}
`;

exports[`/admin/price-lists POST /admin/price-lists/:id/prices/batch Adds a batch of new prices to a price list overriding existing prices 1`] = `
Array [
  Object {
    "amount": 45,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 2000,
    "min_quantity": 1001,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
  Object {
    "amount": 35,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 3000,
    "min_quantity": 2001,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
  Object {
    "amount": 25,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 4000,
    "min_quantity": 3001,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
]
`;

exports[`/admin/price-lists POST /admin/price-lists/:id/prices/batch Adds a batch of new prices to a price list without overriding existing prices 1`] = `
Array [
  Object {
    "amount": 100,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 100,
    "min_quantity": 1,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
  Object {
    "amount": 80,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 500,
    "min_quantity": 101,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
  Object {
    "amount": 50,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 1000,
    "min_quantity": 501,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
  Object {
    "amount": 45,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 2000,
    "min_quantity": 1001,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
  Object {
    "amount": 35,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 3000,
    "min_quantity": 2001,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
  Object {
    "amount": 25,
    "created_at": Any<String>,
    "currency_code": "usd",
    "deleted_at": null,
    "id": Any<String>,
    "max_quantity": 4000,
    "min_quantity": 3001,
    "price_list_id": "pl_no_customer_groups",
    "region_id": null,
    "updated_at": Any<String>,
    "variant_id": "test-variant",
  },
]
`;

